@@ -128,9 +128,10 @@ Settings.gitlab_shell['ssh_path_prefix'] ||= Settings.send(:build_gitlab_shell_s
 # Backup
 #
 Settings['backup'] ||= Settingslogic.new({})
-Settings.backup['keep_time']  ||= 0
-Settings.backup['path']         = File.expand_path(Settings.backup['path'] || "tmp/backups/", Rails.root)
-Settings.backup['upload'] ||= Settingslogic.new({'remote_directory' => nil, 'connection' => nil})
+Settings.backup['keep_time']   ||= 0
+Settings.backup['path']          = File.expand_path(Settings.backup['path'] || 'tmp/backups/', Rails.root)
+Settings.backup['compression'] ||= Settingslogic.new({ 'command' => nil, 'level' => nil })
+Settings.backup['upload']      ||= Settingslogic.new({ 'remote_directory' => nil, 'connection' => nil })
 # Convert upload connection settings to use symbol keys, to make Fog happy
 if Settings.backup['upload']['connection']
   Settings.backup['upload']['connection'] = Hash[Settings.backup['upload']['connection'].map { |k, v| [k.to_sym, v] }]
